--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,9 +5,10 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
 <div class="row">
+    <div class="col-md-4"></div>
     <div class="col-md-4">
+        <h1>@ViewData["Title"]</h1>
         <section>
             <form id="account" method="post">
                 <h4>Use a local account to log in.</h4>
@@ -45,7 +46,8 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+</div>
+    @* <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -74,8 +76,7 @@
                 }
             }
         </section>
-    </div>
-</div>
+    </div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
