Add newcomposition page

--- a/Views/Home/NewComposition.cshtml
+++ b/Views/Home/NewComposition.cshtml
@@ -1,8 +1,9 @@
 @page
-@{
-    ViewData["Title"] = "Log in";
-}
 
-<div class="row">
-    
-</div>
+<form id="container-for-chapters">
+  <div class="form-group" align="center">
+    <button class="btn btn-outline-secondary" id="append-new-chapter" onclick="appendNewChapter()">Add chapter</button>
+  </div>
+</form>
+
+<script src="~/js/NewComposition/chapters.js"></script>
