--- a/Views/Home/Administrator.cshtml
+++ b/Views/Home/Administrator.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Admin";
 }
 
-@model HomeController
+@model coursework_itransition.Controllers.HomeController
 
 <div class="table-responsive table-striped">
         <table class="table" id="controls">
