--- a/Views/Home/NewComposition.cshtml
+++ b/Views/Home/NewComposition.cshtml
@@ -1,9 +1,28 @@
 @page
 
-<form id="container-for-chapters">
-  <div class="form-group" align="center">
-    <button class="btn btn-outline-secondary" id="append-new-chapter" onclick="appendNewChapter()">Add chapter</button>
+<div id="composition-editor" class="form-group">
+  <div class="form-group">
+    <input class="form-control" placeholder="Composition title">
   </div>
-</form>
+  <div class="form-group">
+    <textarea class="form-control" rows="10"></textarea>
+  </div>
+  <div class="form-group" align="center">
+    <button class="btn btn-outline-secondary" onclick="displayChapterEditor()">Chapter editor</button>
+  </div>
+</div>
 
-<script src="~/js/NewComposition/chapters.js"></script>
+<div id="chapter-editor" class="form-group" style="display: none;">
+  <div class="form-group">
+    <input class="form-control" placeholder="Chapter title">
+  </div>
+  <div class="form-group">
+    <textarea class="form-control" rows="15"></textarea>
+  </div>
+  <div class="form-group" align="center">
+    <button class="btn btn-secondary" onclick="closeChapterEditor()">Cancel</button>
+    <button class="btn btn-primary" onclick="closeAndSaveChapterEditor()">Save</button>
+  </div>
+</div>
+
+<script src="~/js/NewComposition/manager.js"></script>
