--- a/Views/Home/NewComposition.cshtml
+++ b/Views/Home/NewComposition.cshtml
@@ -20,9 +20,9 @@
     <textarea class="form-control" rows="15"></textarea>
   </div>
   <div class="form-group" align="center">
-    <button class="btn btn-secondary" onclick="closeChapterEditor()">Cancel</button>
     <button class="btn btn-primary" onclick="closeAndSaveChapterEditor()">Save</button>
+    <button class="btn btn-secondary" onclick="closeChapterEditor()">Cancel</button>
   </div>
 </div>
 
-<script src="~/js/NewComposition/manager.js"></script>
+<script type="module" src="~/js/NewComposition/manager.js"></script>
