--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,43 +3,48 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-
-<ul class="navbar-nav flex-grow-1">
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-    </li>
-    @if (SignInManager.IsSignedIn(User) )
-    {
-        <li class="nav-item">
+<div class="d-inline-flex order-md-4 ml-auto ">
+    <div class="input-group ">
+        <input type="text" class="form-control">
+        <div class="input-group-append">
+            <button class="btn btn-dark">
+                <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+        </div>
+    </div> 
+</div>
+@if (SignInManager.IsSignedIn(User) )
+{
+    <div class="order-md-2">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="NewComposition">New composition</a>
-    </li>
-        @if(User.IsInRole("Administrator"))
-        {
-            <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Administrator">Admin</a>
-            </li>
-        }
+    </div>
+    @if(User.IsInRole("Administrator"))
+    {
+        <div class="order-md-3">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Administrator">Admin</a>
+        </div>
     }
-</ul>
-<ul class="navbar-nav">
+}
+
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
+    <div class="order-md-5">
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
+    </div>
+    <div class="order-md-6">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
-    </li>
+    </div>
 }
 else
 {
-    <li class="nav-item">
+    <div class="order-md-5">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
+    </div>
+    <div class="order-md-6">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    </div>
 }
-</ul>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
