--- a/Views/Composition/New.cshtml
+++ b/Views/Composition/New.cshtml
@@ -1,6 +1,6 @@
-@page
+@model coursework_itransition.Models.Composition
 
-<div id="composition-editor" class="form-group">
+@* <div id="composition-editor" class="form-group">
   <div class="form-group">
     <input class="form-control" placeholder="Composition title">
   </div>
@@ -25,4 +25,27 @@
   </div>
 </div>
 
-<script type="module" src="~/js/NewComposition/manager.js"></script>
+<script type="module" src="~/js/NewComposition/manager.js"></script> *@
+<div class="row justify-content-center">
+    <div class="col-lg-9 col-xl-9 col-md-9">
+        <form asp-action="New">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @* <input type="hidden" asp-for="ID"> *@
+            <div class="form-group">
+                @* <label asp-for="Title" class="control-label"></label> *@
+                <input asp-for="Title" class="form-control" placeholder="Composition title" required>
+                @* <span asp-validation-for="Title" class="text-danger"></span> *@
+            </div>
+            <div class="form-group">
+                @* <label asp-for="Summary" class="control-label"></label>
+                <input asp-for="Summary" class="form-control" /> *@
+                <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
+                @* <span asp-validation-for="Summary" class="text-danger"></span> *@
+            </div>
+            <div class="form-group" align="center">
+                <a href="/Home/Index" type="button" class="btn btn-secondary" onclick="return confirm('Sure?:)');">Cancel</a>
+                <input type="submit" value="Create" class="btn btn-primary">
+            </div>
+        </form>
+    </div>
+</div>
