--- a/Views/Composition/New.cshtml
+++ b/Views/Composition/New.cshtml
@@ -1,46 +1,24 @@
 @model coursework_itransition.Models.Composition
 
-@* <div id="composition-editor" class="form-group">
-  <div class="form-group">
-    <input class="form-control" placeholder="Composition title">
-  </div>
-  <div class="form-group">
-    <textarea class="form-control" rows="10"></textarea>
-  </div>
-  <div class="form-group" align="center">
-    <button class="btn btn-outline-secondary" onclick="displayChapterEditor()">Chapter editor</button>
-  </div>
-</div>
-
-<div id="chapter-editor" class="form-group" style="display: none;">
-  <div class="form-group">
-    <input class="form-control" placeholder="Chapter title">
-  </div>
-  <div class="form-group">
-    <textarea class="form-control" rows="15"></textarea>
-  </div>
-  <div class="form-group" align="center">
-    <button class="btn btn-primary" onclick="closeAndSaveChapterEditor()">Save</button>
-    <button class="btn btn-secondary" onclick="closeChapterEditor()">Cancel</button>
-  </div>
-</div>
-
-<script type="module" src="~/js/NewComposition/manager.js"></script> *@
 <div class="row justify-content-center">
-    <div class="col-lg-9 col-xl-9 col-md-9">
+    <div class="col-lg-9 col-xl-9">
         <form asp-action="New">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @* <input type="hidden" asp-for="ID"> *@
             <div class="form-group">
-                @* <label asp-for="Title" class="control-label"></label> *@
                 <input asp-for="Title" class="form-control" placeholder="Composition title" required>
-                @* <span asp-validation-for="Title" class="text-danger"></span> *@
             </div>
             <div class="form-group">
-                @* <label asp-for="Summary" class="control-label"></label>
-                <input asp-for="Summary" class="form-control" /> *@
+              <select asp-for="Genre" class="form-control" aria-placeholder="Select composition genre" required>
+                <option>Fiction</option>
+                <option>Novel</option>
+                <option>Prose</option>
+                <option>Drama</option>
+                <option>Mystery</option>
+                <option>Horror</option>
+              </select>
+            </div>
+            <div class="form-group">
                 <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
-                @* <span asp-validation-for="Summary" class="text-danger"></span> *@
             </div>
             <div class="form-group" align="center">
                 <a href="/Home/Index" type="button" class="btn btn-secondary" onclick="return confirm('Sure?:)');">Cancel</a>
