--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,53 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+@model coursework_itransition.Controllers.HomeController
+
+<div class="p-2 text-center bg-light">     
+    <h3 class="mb-2">
+        Composition
+    </h3>
+</div>
+<div class="table-responsive table-striped">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>AuthorID</th>
+                    <th>LastEditDT</th>
+                    <th></th>
+                </tr>
+            </thead>
+            @foreach (var b in Model._context.Composition)
+            {
+                <tr>
+                    <td><p>@b.Title</p></td>
+                    <td><p>@b.AuthorID</p></td>
+                    <td><p>@b.LastEditDT</p></td> 
+                    <td>
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@b.ID" >
+                            <i class="fa fa-eye"></i>
+                        </button>    
+                        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">@b.Title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                @b.Summary
+                              </div>
+                              <div class="modal-footer">
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </table>    
+</div>
