--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                         <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@b.ID" >
                             <i class="fa fa-eye"></i>
                         </button>    
-                        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                        <div class="modal fade" id="model-@b.ID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                           <div class="modal-dialog" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
