Add edit composition functionality + a few changes
change: composition constructor

change: compositions dbset name

--- a/Views/Composition/New.cshtml
+++ b/Views/Composition/New.cshtml
@@ -8,7 +8,7 @@
                 <input asp-for="Title" class="form-control" placeholder="Composition title" required>
             </div>
             <div class="form-group">
-              <select asp-for="Genre" class="form-control" aria-placeholder="Select composition genre" required>
+              <select asp-for="Genre" class="form-control" required>
                 <option>Fiction</option>
                 <option>Novel</option>
                 <option>Prose</option>
