Changed old name to new

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                     <th></th>
                 </tr>
             </thead>
-            @foreach (var b in Model._context.Composition)
+            @foreach (var b in Model._context.Compositions)
             {
                 <tr>
                     <td><p>@b.Title</p></td>
