--- a/Views/Home/Administrator.cshtml
+++ b/Views/Home/Administrator.cshtml
@@ -39,12 +39,15 @@
                     <td>
                         <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@b.Id" >
                             <i class="fa fa-eye"></i>
-                        </button>                         
+                        </button>    
+                        @* <div class="modal fade bd-example-modal-lg" id="model-@b.Id" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-lg">
+                            <div class="modal-content">                              *@
                         <div class="modal fade" id="model-@b.Id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                  <h5 class="modal-title" id="exampleModalLabel">@b.Name</h5>
                                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                   </button>
@@ -52,18 +55,48 @@
                                 <div class="modal-body">
                                   <form>
                                     <div class="form-group">
-                                      <label for="recipient-name" class="col-form-label">Recipient:</label>
-                                      <input type="text" class="form-control" id="recipient-name">
+                                      <label for="recipient-name" class="col-form-label">EMAIL : @b.Email</label> <br/>
+                                      <label for="recipient-name" class="col-form-label">USER ID: @b.Id</label>
                                     </div>
                                     <div class="form-group">
-                                      <label for="message-text" class="col-form-label">Message:</label>
-                                      <textarea class="form-control" id="message-text"></textarea>
+                                      
+                                      @if (b.LockoutEnabled)
+                                      {
+                                        <button type="button" class="btn btn-dark">Ban</button>
+                                      }
+                                      else
+                                      {
+                                        <button type="button" class="btn btn-dark">Unban</button>
+                                      }
+                                      @if(true)
+                                      {
+                                        <button type="button" class="btn btn-dark">Make admin</button>       
+                                      }
+                                      else
+                                      {
+                                        <button type="button" class="btn btn-dark">Remove admin status</button>       
+                                      }       
+                                      <button type="button" class="btn btn-dark">Delete user</button>       
                                     </div>
+                                    @if(true)
+                                    {
+                                      <label for="message-text" class="col-form-label">All composition:</label>
+                                      @*@{int number = 1;} 
+                                      @foreach (var item in collection)
+                                      {
+                                        ++number;
+                                      } *@
+                                    }
+                                    else
+                                    {
+                                      <label for="message-text" class="col-form-label">No composition</label>
+                                    }
+                                    
                                   </form>
                                 </div>
                                 <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                  <button type="button" class="btn btn-primary">Send message</button>
+                                  <button type="button" class="btn btn-darks" data-dismiss="modal">Close</button>
+                                  @* <button type="button" class="btn btn-primary">Send message</button> *@
                                 </div>
                               </div>
                             </div>
