Add administrator controller

--- a/Views/Home/Administrator.cshtml
+++ b/Views/Home/Administrator.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Admin";
 }
 
-@model coursework_itransition.Controllers.HomeController
+@model coursework_itransition.Controllers.AdministratorController
 
 <div class="p-2 text-center bg-light">     
     <h3 class="mb-2">
