--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
     @if(User.IsInRole("Administrator"))
     {
         <div class="order-md-3">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Administrator">Admin</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
         </div>
     }
 }
