--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,10 +28,13 @@
                     <td>
                         <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@composition.ID" >
                             <i class="fa fa-eye"></i>
-                        </button>    
-                        <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" type="button" class="btn btn-dark">
-                            <i class="fa fa-edit"></i>
-                        </a>
+                        </button>
+                        @if(Model.CurrentUserIsAuthorOf(composition))
+                        {  
+                            <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" type="button" class="btn btn-dark">
+                                <i class="fa fa-edit"></i>
+                            </a>
+                        }
                         <div class="modal fade" id="model-@composition.ID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                           <div class="modal-dialog" role="document">
                             <div class="modal-content">
