--- a/Views/Composition/New.cshtml
+++ b/Views/Composition/New.cshtml
@@ -21,7 +21,7 @@
                 <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
             </div>
             <div class="form-group" align="center">
-                <a href="/Home/Index" type="button" class="btn btn-secondary" onclick="return confirm('Sure?:)');">Cancel</a>
+                <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
                 <input type="submit" value="Create" class="btn btn-primary">
             </div>
         </form>
