Add fine  button back in edit #2

--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -32,9 +32,8 @@
                     </div>
                     <div class="form-group" align="center">
                         <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
-                        @* type="submit" namevalue="document.referrer" *@
                         <script>
-                            document.write('<button type="submit" name="retrunUrl" value="'+ document.referrer + '" class="btn btn-primary">Save</button>');
+                            document.write('<button type="submit" name="url" value="'+ document.referrer + '" class="btn btn-primary">Save</button>');
                         </script>
                         
                     </div>
