--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -102,7 +102,7 @@
                                   </form>
                                 </div>
                                 <div class="modal-footer">
-                                  <button type="button" class="btn btn-darks" data-dismiss="modal">Close</button>
+                                  <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
                                   @* <button type="button" class="btn btn-primary">Send message</button> *@
                                 </div>
                               </div>
