--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Edit";
+}
+
 @model coursework_itransition.Controllers.CompositionController
 
 @if((System.Object)Model != null)
@@ -31,8 +35,8 @@
                         <textarea class="form-control" asp-for="DisplayComposition.Summary" class="form-control" rows="10"></textarea>
                     </div>
                     <div class="form-group" align="center">
-                        <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
-                        <input type="submit" value="Save" class="btn btn-primary" asp-route-returnUrl="@Model.ReturnUrl">
+                        <a href="javascript:history.go(-1)" type="button" class="btn btn-dark" onclick="return confirm('you sure? :)');">Cancel</a>
+                        <input type="submit" value="Save" class="btn btn-dark" asp-route-returnUrl="@Model.ReturnUrl">
                     </div>
                 </form>
             </div>
