--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     </h3>
 </div>
 <div class="table-responsive table-striped">
-        <table class="table">
+        <table class="table table-light">
             <thead>
                 <tr>
                     <th>Title</th>
