--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,22 +4,80 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - coursework_itransition</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" id="theme" href="~/css/black_custome_bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />  
+    <script>  
+        alert( document.cookie );
+        var cssDark = "/css/black_custome_bootstrap.css";
+        var cssWhite = "/css/white_custome_bootstrap.css";
+
+        function getCookie(name) {
+            let matches = document.cookie.match(new RegExp(
+            "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"
+            ));
+            return matches ? decodeURIComponent(matches[1]) : undefined;
+        }
+
+        function setCookie(name, value, options = {}) {
+            options = {
+                path: '/',
+                ...options
+            };
+            if (options.expires instanceof Date) {
+                options.expires = options.expires.toUTCString();
+            }
+            let updatedCookie = encodeURIComponent(name) + "=" + encodeURIComponent(value);
+            for (let optionKey in options) {
+                updatedCookie += "; " + optionKey;
+                let optionValue = options[optionKey];
+                if (optionValue !== true) {
+                updatedCookie += "=" + optionValue;
+                }
+            }
+            document.cookie = updatedCookie;
+        }
+
+        let link=document.createElement('link');
+        link.id='theme';
+        link.rel='stylesheet';
+        if(getCookie("theme") == "dark")
+            link.href = cssDark;
+        else
+            link.href = cssWhite;
+        document.getElementsByTagName('head')[0].appendChild(link);  
+
+        function changeCSS(id) {
+            var el_link = document.getElementById("theme");
+            if(el_link.href.split('/').pop()=="white_custome_bootstrap.css")
+            {
+                setCookie("theme","dark");
+                alert( document.cookie );
+
+                el_link.href = cssDark;
+                document.getElementById(id).innerHTML = ' <i size="9px" class="fa fa-moon"></i>';
+            }
+            else
+            {
+                setCookie("theme","white");
+                alert( document.cookie );
+
+                el_link.href = cssWhite;
+                document.getElementById(id).innerHTML = '<i size="9px" class="fa fa-sun"></i>';
+            }
+            document.getElementsByTagName('head')[0].appendChild(el_link);
+        }
+</script>  
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa fa-bars text-light"></i>
                 </button>
                 <div class="navbar-collapse collapse d-lg-inline-flex flex-lg-row">
                     <partial name="_LoginPartial" />
-                    <div onclick="changeCSS()">a</div>
                 </div>
             </div>
         </nav>
@@ -31,8 +89,18 @@
     </div>
 
     <footer class="border-top footer text-muted">
+        
         <div class="container">
-            &copy; 2020 - coursework_itransition
+            <script>
+                if(getCookie("theme") == "dark")
+                {
+                    document.write('<a  class="nav-link text-dark" id="changer-theme" onclick="changeCSS(id)"><i size="9px" class="fa fa-moon"></i></a>');
+                }
+                else
+                {
+                    document.write('<a  class="nav-link text-dark" id="changer-theme" onclick="changeCSS(id)"><i size="9px" class="fa fa-sun"></i></a>');
+                }
+            </script>
         </div>
     </footer>
     
@@ -40,24 +108,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
     @RenderSection("Scripts", required: false)
 </body>
 </html>
-
-<script>
-    var cssLinkIndex = "/css/black_custome_bootstrap.css";
-    var cssFile = "/css/white_custome_bootstrap.css";
-   function changeCSS() {
-        var el_link = document.getElementById("theme");
-        if(el_link.href.split('/').pop()=="white_custome_bootstrap.css")
-        {
-            el_link.href="/css/black_custome_bootstrap.css";
-        }
-        else
-        {
-            el_link.href="/css/white_custome_bootstrap.css";
-        }
-        document.appendChild(el_link);
-    }
-</script>
