--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,21 +8,21 @@ a.navbar-brand {
 }
 
 /* Provide sufficient contrast against white background */
-a {
+/* a {
   color: #0366d6;
-}
+} */
 
-.btn-primary {
+/* .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
-}
+} */
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+/* .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
-}
+} */
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -35,12 +35,12 @@ html {
   }
 }
 
-.border-top {
+/* .border-top {
   border-top: 1px solid #e5e5e5;
 }
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
-}
+} */
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
