--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="p-2 text-center bg-light">     
+<div class="p-2 text-center bg-dark">     
     <h3 class="mb-2">
         Composition
     </h3>
