--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,12 +16,12 @@
 @if (SignInManager.IsSignedIn(User) )
 {
     <div class="order-md-2">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
+        <a class="nav-link" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
     </div>
     @if(User.IsInRole("Administrator"))
     {
         <div class="order-md-3">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
+            <a class="nav-link" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
         </div>
     }
 }
@@ -29,20 +29,20 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <div class="order-md-5">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
+        <a  class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
     </div>
     <div class="order-md-6">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link">Logout</button>
         </form>
     </div>
 }
 else
 {
     <div class="order-md-5">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </div>
     <div class="order-md-6">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </div>
 }
