--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,21 +13,22 @@
         <div class="dropdown-menu">
             @if (SignInManager.IsSignedIn(User) )
             {
-                <a class="dropdown-item nav-link" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
                 @if(User.IsInRole("Administrator"))
                 {
-                    <a class="dropdown-item nav-link" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
+                    <a class="dropdown-item" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
                 }
             
-                <a  class="dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
+                <a  class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
+                <div class="dropdown-divider"></div>
                 <form  class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button  type="submit" class="dropdown-item nav-link btn btn-link">Logout</button>
+                    <button  type="submit" class="dropdown-item btn btn-link">Logout</button>
                 </form>
             }
             else
             {
-                <a class="dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
-                <a class="dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Login</a>
             }
         </div>
     </li>
