--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,51 @@
         Composition
     </h3>
 </div>
+
+<div class="container">
+<div class="col-md-7">
+    <div class="social-feed-separated">
+        <div class="social-avatar">
+            <a href="">
+                <img alt="image" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+            </a>
+        </div>
+
+        <div class="social-feed-box">
+            <div class="pull-right social-action dropdown">
+                <button data-toggle="dropdown" class="dropdown-toggle btn-white">
+                    <i class="fa fa-angle-down"></i>
+                </button>
+                <ul class="dropdown-menu m-t-xs">
+                    <li><a href="#">Config</a></li>
+                </ul>
+            </div>
+            <div class="social-avatar">
+                <a href="#">
+                    Andrew Williams
+                </a>
+                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+            </div>
+            <div class="social-body">
+                <p>
+                    Many desktop publishing packages and web page editors now use Lorem Ipsum as their
+                    default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                    in their infancy. Packages and web page editors now use Lorem Ipsum as their
+                    default model text.
+                </p>
+                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-responsive">
+                <div class="btn-group">
+                    <button class="btn btn-white btn-xs"><i class="fa fa-thumbs-up"></i> Like this!</button>
+                    <button class="btn btn-white btn-xs"><i class="fa fa-comments"></i> Comment</button>
+                    <button class="btn btn-white btn-xs"><i class="fa fa-share"></i> Share</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="table-responsive table-striped">
         <table class="table table-light">
             <thead>
