--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,43 +3,23 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<ul class="navbar-nav mr-auto">
-    @* tyt veshi, kotorie v navbare sleva bydyt *@
-</ul>
-
-<ul class="navbar-nav ml-auto">    
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Profile</a>
-        <div class="dropdown-menu">
-            @if (SignInManager.IsSignedIn(User) )
-            {
-                <a class="dropdown-item" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
-                @if(User.IsInRole("Administrator"))
-                {
-                    <a class="dropdown-item" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
-                }
-            
-                <a  class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Info</a>
-                <div class="dropdown-divider"></div>
-                <form  class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button  type="submit" class="dropdown-item btn btn-link">Logout</button>
-                </form>
-            }
-            else
-            {
-                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a>
-                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Login</a>
-            }
-        </div>
-    </li>
-
-    <li class="nav-item">
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-            </input>
-        </form>
-    </li>
-</ul>
+@if (SignInManager.IsSignedIn(User) )
+{
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" asp-area="" asp-controller="Composition" asp-action="New">New composition</a>
+    @if(User.IsInRole("Administrator"))
+    {
+        <a class="dropdown-item" asp-area="" asp-controller="Administrator" asp-action="Administrator">Admin</a>
+    }
+    <a  class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
+    <div class="dropdown-divider"></div>
+    <form  class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <button  type="submit" class="dropdown-item">Logout</button>
+    </form>
+}
+else
+{
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a>
+}
